--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "vaul": "^0.9.9",
     "zod": "3.25.67",
     "framer-motion": "^11.0.0",
-    "@paper-design/shaders-react": "^0.1.0"
+  "@paper-design/shaders-react": "0.0.54"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
